--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #1f2937;
+  color: white;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 2rem;
+}
+
+.board {
+  border: 0.5rem solid #fff;
+  background: #fff;
+  width: 500px;
+  height: 500px;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  gap: 0.5rem;
+  border-radius: 5px;
+}
+
+.squares {
+  background: #1f2937;
+  border-radius: 5px;
+  border: none;
+  font-size: 5rem;
+  /* font-weight: 800; */
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease-in;
+}
+
+.squares:hover {
+  background-color: #9ca3af;
+}
+
+.X {
+  font-weight: bold;
+  color: #fff;
+  background: #f87171;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.O {
+  font-weight: bold;
+  color: #fff;
+  background: #34d399;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
