--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body {
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
   gap: 0.5rem;
   border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
 }
 
 .squares {
